# hrrr-ingest

./: .env.example  .gitignore  README.md
deploy/: cron.sh  run-cycle-mac.sh  run-cycle.sh
docs/: deploy-checklist.md  hrrr_threshold_tool_spec.md  mac-studio-migration.md  runbook.md
ingest/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ingest/src/hrrr_ingest/: __init__.py  catalog.py  config.py  cycle.py  fetch.py  idx.py  logging_setup.py  notify.py  orchestrator.py  publish.py  subset.py
ingest/src/hrrr_ingest/compute/: __init__.py  composites.py  derivations.py  parcel.py  parcel_composites.py  thermo.py  units.py
ingest/tests/: conftest.py  test_catalog.py  test_composites.py  test_compute.py  test_cycle.py  test_fetch.py  test_idx.py  test_integration.py  test_parcel.py  test_publish.py  test_subset.py  test_thermo.py
